# yaab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  gap_analysis_parsed.json  mkdocs.yml  pyproject.toml
.claude/workflows/: adk-gap-analysis.js
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: ADK_GAP_ANALYSIS.md  COMPARISON.md  DEPLOYMENT.md  RESEARCH_FEATURE_DEMAND.md  ROADMAP.md  agents.md  concepts.md  evaluation.md  extending.md  get-started.md  governance.md  graph.md  hitl.md  index.md  interop.md  limits.md  llms.txt  models.md  multi-agent.md  optimization.md  platform.md  prompts-skills.md  quickstart.md  rag.md  robustness.md  serving.md  state-and-agui.md  state.md  storage-backends.md  streaming-events.md  tools.md
docs/api/: agent.md  governance.md  graph.md  limits.md  memory.md  models.md  multiagent.md  rag.md  runner.md  serve.md  sessions.md  testing.md  tools.md  types.md
docs/superpowers/specs/: 2026-05-31-close-industry-gaps-design.md  2026-06-01-docs-examples-maturity-design.md
examples/: 01_quickstart.py  02_graph_hitl.py  03_governance.py  04_multi_agent.py  05_streaming.py  06_managers.py  07_rag.py  08_robust_agent.py  09_loaders_streaming_batch.py  serve_app.py
samples/: README.md  __init__.py  _common.py
samples/approval_pipeline/: __init__.py  __main__.py
samples/coding_helper/: __init__.py  __main__.py
samples/customer_support/: __init__.py  __main__.py
samples/document_qa/: __init__.py
samples/memory_patterns/: __init__.py  __main__.py
samples/multi_agent_state/: __init__.py  __main__.py
samples/personal_assistant/: __init__.py  __main__.py
samples/research_assistant/: __init__.py
samples/triage_swarm/: __init__.py  __main__.py
scripts/: README.md  live_durable_check.py  live_e2e.py  live_llm_check.py  live_serve_check.py  live_v2_check.py  live_wave3_check.py  smoke_all.py  verify_shared_state.py
tests/: test_a2a_depth.py  test_agent.py  test_agent_callbacks.py  test_agent_resume.py  test_agui.py  test_agui_roundtrip.py  test_approval.py  test_approval_api.py  test_approval_integration.py  test_approval_store.py  test_artifact_backends.py  test_ask_user.py  test_authorization.py  test_builtin_tools.py  test_builtin_tools_expansion.py  test_cloud_backends.py  test_compliance.py  test_conditional_patterns.py  test_conditions.py  test_content.py  test_context_caching.py  test_context_window.py  test_core.py  test_cron.py  test_deploy_cli.py  test_distributed_ratelimit.py  test_doc_snippets.py  test_durable_backends_wiring.py  test_durable_race_fixes.py  test_durable_run_api.py  test_embedder_default.py  test_ephemeral_warning.py  test_eval_adapters.py  test_eval_cli.py  test_evalset.py  test_event_enrichment.py  test_examples.py  test_expression_grammar.py  test_fastpath_default_durability.py  test_flow_hitl.py  (+81 more)
yaab/: __init__.py  _core.py  agent.py  agui.py  auth.py  batch.py  cli.py  conditions.py  config.py  content.py  context.py  deploy.py  deploy_backends.py  exceptions.py  expr.py  extensions.py  flow.py  limits.py  multiagent.py  prompts.py  ratelimiters.py  runner.py  serve.py  skills.py  state.py  streaming.py  types.py  voice.py  web.py
yaab-core/: Cargo.toml  README.md  pyproject.toml
yaab-core/src/: actors.rs  channels.rs  checkpoint.rs  lib.rs  scheduler.rs  vector.rs
yaab/a2a/: __init__.py  client.py
yaab/artifacts/: __init__.py  manager.py  postgres.py  redis.py  sqlite.py
yaab/eval/: __init__.py
yaab/eval/adapters/: __init__.py  deepeval.py  ragas.py
yaab/governance/: __init__.py  approval.py  approvals.py  approvals_decide.py  audit.py  authorization.py  eval.py  evalset.py  lifecycle.py  monitor.py  policy.py  registry.py  service.py  simulation.py
yaab/governance/compliance/: __init__.py  base.py  eu_ai_act.py  iso_42001.py  nist_ai_rmf.py  soc2.py  sr_11_7.py
yaab/governance/guardrails/: __init__.py  llm_guard.py  nemo.py  presidio.py
yaab/graph/: __init__.py  checkpoint.py  state.py
yaab/memory/: __init__.py  embedders.py  extraction.py  manager.py
yaab/models/: __init__.py  base.py  distributed_ratelimit.py  instrumented.py  litellm_provider.py  resilient.py  router.py  test_model.py
yaab/observability/: __init__.py  sinks.py
yaab/optimize/: __init__.py  module.py  optimizer.py  signature.py
yaab/plugins/: __init__.py  builtins.py
yaab/rag/: __init__.py  chunking.py  eval.py  hybrid.py  knowledge.py  loaders.py  memory_service.py  rerank.py  store.py  stores_external.py  types.py
yaab/runs/: __init__.py  base.py  cancel.py  cron.py  history.py  memory.py  postgres.py  redis.py  safety.py  sqlite.py  trace.py  worker.py
yaab/sessions/: __init__.py  base.py  manager.py  memory.py  postgres.py  redis.py  sqlite.py
yaab/testing/: __init__.py
yaab/tools/: __init__.py  adapters.py  agent_tool.py  auth.py  base.py  mcp.py  mcp_client.py  mcp_server.py  openapi.py  sandbox.py
yaab/tools/builtin/: __init__.py  ask_user.py  calculator.py  code.py  datetime_tool.py  files.py  grounding.py  http.py  search.py  url_context.py
