[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaab"
version = "0.1.0"
description = "Yet Another Agent Builder — a type-safe, governance-first agent SDK with a Rust performance core."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "YAAB contributors" }]
keywords = ["agents", "llm", "ai", "governance", "compliance", "orchestration", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
# The universal model layer. Optional so the SDK (and TestModel) work offline.
litellm = ["litellm>=1.40"]
# OpenTelemetry GenAI instrumentation sinks.
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
# Postgres-backed session/checkpoint/registry/audit backends + pgvector store.
postgres = ["psycopg[binary]>=3.1"]
# HTTP fetch / web-search / A2A-client built-in tools.
http = ["httpx>=0.27"]
# Serving (FastAPI app, SSE, AG-UI middleware).
serve = ["fastapi>=0.110", "uvicorn>=0.29"]
# Declarative YAML agent configuration.
yaml = ["pyyaml>=6.0"]
# Document loaders (PDF + rich HTML) for RAG ingestion.
rag = ["pypdf>=4.0", "beautifulsoup4>=4.12"]
# External vector stores.
chroma = ["chromadb>=0.5"]
qdrant = ["qdrant-client>=1.9"]
# External audit/observability sinks.
langfuse = ["langfuse>=2.0"]
logfire = ["logfire>=0.30"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "maturin>=1.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "fastapi>=0.110",
    "pyyaml>=6.0",
]
all = ["yaab[litellm,otel,postgres,http,serve,yaml,rag]"]

[project.scripts]
yaab = "yaab.cli:main"

[project.urls]
Homepage = "https://github.com/sthitaprajnas/yaab"
Repository = "https://github.com/sthitaprajnas/yaab"

[project.entry-points."yaab.compliance"]
sr_11_7 = "yaab.governance.compliance.sr_11_7:SR117Mapper"
eu_ai_act = "yaab.governance.compliance.eu_ai_act:EUAIActMapper"
nist_ai_rmf = "yaab.governance.compliance.nist_ai_rmf:NISTAIRMFMapper"
iso_42001 = "yaab.governance.compliance.iso_42001:ISO42001Mapper"
soc2 = "yaab.governance.compliance.soc2:SOC2Mapper"

[tool.hatch.build.targets.wheel]
packages = ["yaab"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
