[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaab"
version = "0.1.0"
description = "Yet Another Agent Builder — a type-safe, governance-first agent SDK with a Rust performance core."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "YAAB contributors" }]
keywords = ["agents", "llm", "ai", "governance", "compliance", "orchestration", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
# The Rust performance core, published as its own wheel. Optional: without it,
# YAAB transparently uses its high-performance async-first pure-Python core.
rust = ["yaab-core>=0.1.0"]
# The universal model layer. Optional so the SDK (and TestModel) work offline.
litellm = ["litellm>=1.40"]
# OpenTelemetry GenAI instrumentation sinks.
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
# Postgres-backed session/checkpoint/registry/audit backends + pgvector store.
postgres = ["psycopg[binary]>=3.1"]
# HTTP fetch / web-search / A2A-client built-in tools.
http = ["httpx>=0.27"]
# Serving (FastAPI app, SSE, AG-UI middleware).
serve = ["fastapi>=0.110", "uvicorn>=0.29"]
# Declarative YAML agent configuration.
yaml = ["pyyaml>=6.0"]
# Document loaders (PDF + rich HTML) for RAG ingestion.
rag = ["pypdf>=4.0", "beautifulsoup4>=4.12"]
# External vector stores.
chroma = ["chromadb>=0.5"]
qdrant = ["qdrant-client>=1.9"]
# External audit/observability sinks.
langfuse = ["langfuse>=2.0"]
logfire = ["logfire>=0.30"]
# External eval suites (adapters import these lazily).
ragas = ["ragas>=0.1", "datasets>=2.0"]
deepeval = ["deepeval>=1.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "maturin>=1.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "fastapi>=0.110",
    "pyyaml>=6.0",
]
all = ["yaab[rust,litellm,otel,postgres,http,serve,yaml,rag]"]

[project.scripts]
yaab = "yaab.cli:main"

[project.urls]
Homepage = "https://github.com/sthitaprajnas/yaab"
Repository = "https://github.com/sthitaprajnas/yaab"

[project.entry-points."yaab.compliance"]
sr_11_7 = "yaab.governance.compliance.sr_11_7:SR117Mapper"
eu_ai_act = "yaab.governance.compliance.eu_ai_act:EUAIActMapper"
nist_ai_rmf = "yaab.governance.compliance.nist_ai_rmf:NISTAIRMFMapper"
iso_42001 = "yaab.governance.compliance.iso_42001:ISO42001Mapper"
soc2 = "yaab.governance.compliance.soc2:SOC2Mapper"

[tool.hatch.build.targets.wheel]
packages = ["yaab"]
# Ship the PEP 561 marker so downstream type checkers see YAAB's type hints.
artifacts = ["yaab/py.typed"]

[tool.hatch.build.targets.sdist]
include = ["yaab", "README.md", "LICENSE", "docs", "examples", "tests", "yaab-core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# str+Enum is intentional: members serialize to their string value for JSON /
# provider payloads. (StrEnum would change .value/format semantics subtly.)
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Pragmatic for an alpha SDK with many optional, lazily-imported integrations:
# check the code, but don't fail on missing third-party stubs or unused ignores.
warn_unused_ignores = false
check_untyped_defs = false

[[tool.mypy.overrides]]
# The performance shim and lazy-integration adapters intentionally use dynamic
# typing at the Rust/optional-dependency boundary.
module = [
    "yaab._core",
    "yaab.rag.stores_external",
    "yaab.eval.adapters.*",
    "yaab.observability.sinks",
    # AgentRegistry.list() shadows the `list` builtin in annotations — a mypy
    # name-resolution quirk, not a runtime issue (verified by tests + CLI).
    "yaab.governance.registry",
    "yaab.cli",
]
ignore_errors = true
