[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI distribution name. The import package and CLI remain `yaab`:
#   pip install yaab-sdk   ->   import yaab   /   $ yaab
name = "yaab-sdk"
version = "0.1.0"
description = "Yet Another Agent Builder — a type-safe, governance-first agent SDK with a Rust performance core."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "YAAB contributors" }]
keywords = ["agents", "llm", "ai", "governance", "compliance", "orchestration", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
# The Rust performance core, published as its own wheel. Optional: without it,
# YAAB transparently uses its high-performance async-first pure-Python core.
rust = ["yaab-core>=0.1.0"]
# The universal model layer. Optional so the SDK (and TestModel) work offline.
litellm = ["litellm>=1.40"]
# OpenTelemetry GenAI instrumentation sinks.
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
# Postgres / Aurora PostgreSQL session backend + pgvector store.
postgres = ["psycopg[binary]>=3.1"]
# Redis / ElastiCache / MemoryDB session backend.
redis = ["redis>=5.0"]
# HTTP fetch / web-search / A2A-client built-in tools.
http = ["httpx>=0.27"]
# Serving (FastAPI app, SSE, AG-UI middleware).
serve = ["fastapi>=0.110", "uvicorn>=0.29"]
# Declarative YAML agent configuration.
yaml = ["pyyaml>=6.0"]
# Document loaders (PDF + rich HTML) for RAG ingestion.
rag = ["pypdf>=4.0", "beautifulsoup4>=4.12"]
# External vector stores.
chroma = ["chromadb>=0.5"]
qdrant = ["qdrant-client>=1.9"]
opensearch = ["opensearch-py>=2.4"]
oracle = ["oracledb>=2.0"]
pinecone = ["pinecone>=5.0"]
weaviate = ["weaviate-client>=4.5"]
# Industry-standard guardrail engines (adapters import these lazily).
presidio = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
llm-guard = ["llm-guard>=0.3"]
nemo = ["nemoguardrails>=0.9"]
# External audit/observability sinks.
langfuse = ["langfuse>=2.0"]
logfire = ["logfire>=0.30"]
# External eval suites (adapters import these lazily).
ragas = ["ragas>=0.1", "datasets>=2.0"]
deepeval = ["deepeval>=1.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "maturin>=1.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "fastapi>=0.110",
    "pyyaml>=6.0",
]
# Documentation site (MkDocs Material + auto-generated API reference).
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
# Everything that installs from PyPI today. The Rust core (`rust` extra) is
# deliberately NOT bundled here: it ships as a separately-published `yaab-core`
# wheel and YAAB falls back to its pure-Python core when absent, so folding it
# into `all` would make `pip install 'yaab-sdk[all]'` fail wherever that wheel isn't
# available. Install the accelerator explicitly with `pip install 'yaab-sdk[rust]'`.
all = ["yaab-sdk[litellm,otel,postgres,http,serve,yaml,rag]"]

[project.scripts]
yaab = "yaab.cli:main"

[project.urls]
Homepage = "https://github.com/sthitaprajnas/yaab"
Repository = "https://github.com/sthitaprajnas/yaab"

[project.entry-points."yaab.compliance"]
sr_11_7 = "yaab.governance.compliance.sr_11_7:SR117Mapper"
eu_ai_act = "yaab.governance.compliance.eu_ai_act:EUAIActMapper"
nist_ai_rmf = "yaab.governance.compliance.nist_ai_rmf:NISTAIRMFMapper"
iso_42001 = "yaab.governance.compliance.iso_42001:ISO42001Mapper"
soc2 = "yaab.governance.compliance.soc2:SOC2Mapper"

[tool.hatch.build.targets.wheel]
packages = ["yaab"]
# Ship the PEP 561 marker so downstream type checkers see YAAB's type hints.
artifacts = ["yaab/py.typed"]

[tool.hatch.build.targets.sdist]
include = ["yaab", "README.md", "LICENSE", "docs", "examples", "tests", "yaab-core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# str+Enum is intentional: members serialize to their string value for JSON /
# provider payloads. (StrEnum would change .value/format semantics subtly.)
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Pragmatic for an alpha SDK with many optional, lazily-imported integrations:
# check the code, but don't fail on missing third-party stubs or unused ignores.
warn_unused_ignores = false
check_untyped_defs = false

[[tool.mypy.overrides]]
# The performance shim and lazy-integration adapters intentionally use dynamic
# typing at the Rust/optional-dependency boundary.
module = [
    "yaab._core",
    "yaab.rag.stores_external",
    "yaab.eval.adapters.*",
    "yaab.observability.sinks",
    # AgentRegistry.list() shadows the `list` builtin in annotations — a mypy
    # name-resolution quirk, not a runtime issue (verified by tests + CLI).
    "yaab.governance.registry",
    "yaab.cli",
]
ignore_errors = true
