[package]
name = "yaab-core"
version = "0.1.0"
edition = "2021"
description = "Rust performance core for the YAAB agent SDK (orchestration, checkpoint serialization, vector ops)."
license = "MIT"
repository = "https://github.com/sthitaprajnas/yaab"
homepage = "https://github.com/sthitaprajnas/yaab"
readme = "README.md"

[lib]
name = "yaab_core"
# cdylib for the Python extension module; rlib so the engine can be reused by other bindings.
crate-type = ["cdylib", "rlib"]

[dependencies]
# abi3-py311: build a single stable-ABI wheel that works on CPython 3.11+ —
# including future versions (3.13, 3.14, …) — so users never fall back to the
# pure-Python core just because their interpreter is newer than our wheels.
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
