[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "yaab-core"
version = "0.1.0"
description = "Rust performance core for the YAAB agent SDK."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "YAAB contributors" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.11",
]

[tool.maturin]
# Pure Rust extension module: produces the importable `yaab_core` module.
module-name = "yaab_core"
